--- a/src/components/Toolbar/index.module.css
+++ b/src/components/Toolbar/index.module.css
@@ -7,7 +7,7 @@
 .container{
     display: flex;
     flex-direction:  row;
-    border: 2px solid blue;
+    border: 2px solid rgb(255, 255, 255);
     padding: 8px 8px;
     margin: 0.5vh 0vw;
 
@@ -31,7 +31,7 @@
     /* border: 2px solid red; */
     padding: 0px 0.6vw;
     margin: 0px 5px;
-    background-color: aqua;
+    background-color: rgb(167, 247, 247);
     border-radius: 4px;
     padding-top: 0.5vh;
     font-size: 22px;
